feat: 添加附件管理功能，包括上传、绑定和定时清理临时附件，同时添加图片处理中间件，对上传的图片进行压缩和转Webp
